fix(z-index): removed elems overlapping

--- a/SPA/my-app/src/assets/css/About.scss
+++ b/SPA/my-app/src/assets/css/About.scss
@@ -130,7 +130,7 @@
 
 .card__content_m {
   // background: linear-gradient(rgba(255, 255, 255, 0.473), rgba(150, 150, 150, 0.25));
-  z-index: 1;
+
   // backdrop-filter: blur(20px);
   // -webkit-backdrop-filter: blur(20px);
   position: absolute;
@@ -314,7 +314,6 @@ h5 {
 
 .mob-share-wrapper{
   animation: move-up6 5s ease-in infinite alternate-reverse;
-  z-index: 10000;
   margin-top: -1vw;
   padding: 3vw;
   background: #171717;
